--- a/src/main/resources/templates/editperson.hbs
+++ b/src/main/resources/templates/editperson.hbs
@@ -4,12 +4,7 @@
 {{> templates/partials/page-anatomy/page-header }}
 
 <main>
-    {{>templates/partials/person}}
-    <div class="parents">
-        {{#each parents}}
-            {{>templates/partials/person}}
-        {{/each}}
-    </div>
+    include form here
 </main>
 
 </body>
