--- a/src/main/resources/templates/editperson.hbs
+++ b/src/main/resources/templates/editperson.hbs
@@ -1,10 +1,10 @@
-{{> templates/partials/page-anatomy/page-head }}
+{{> templates/partials/page-anatomy/page-head}}
 <body>
 
-{{> templates/partials/page-anatomy/page-header }}
+{{> templates/partials/page-anatomy/page-header}}
 
 <main>
-    include form here
+    {{> templates/partials/form}}
 </main>
 
 </body>
