--- a/src/main/resources/templates/partials/page-anatomy/page-header.hbs
+++ b/src/main/resources/templates/partials/page-anatomy/page-header.hbs
@@ -4,5 +4,5 @@
 <nav>
     <a href="/">Home</a> |
     <a href="/list">List</a> |
-    <a href="/form">New Person</a> |
+    <a href="/person">New Person</a> |
 </nav>
