added new (dummy-)views in controller, added created and modified to client

--- a/src/main/resources/templates/partials/page-anatomy/page-head.hbs
+++ b/src/main/resources/templates/partials/page-anatomy/page-head.hbs
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Family Tree</title>
+    <title>Family Tree{{#if pageTitle}} &ndash; {{pageTitle}}{{/if}}</title>
 
     <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" media="all">
     <link rel="stylesheet" type="text/css" href="/assets/css/layout.css" media="all">
